test_data/streamwalk/valid/arrays/01_simple_array.case
# OPTIONS

MODE: AJIS
COMMENTS: off
DIRECTIVES: off
IDENTIFIERS: off
MAX_DEPTH: 64
MAX_TOKEN_BYTES: 1048576

# INPUT

[1, 2, 3, 4, 5]

# EXPECTED

BEGIN_ARRAY
NUMBER b"1"
NUMBER b"2"
NUMBER b"3"
NUMBER b"4"
NUMBER b"5"
END_ARRAY
END_DOCUMENT
