test_data/streamwalk/invalid/syntax/05_expected_name.case
# OPTIONS

MODE: AJIS
COMMENTS: off
DIRECTIVES: off
IDENTIFIERS: off
MAX_DEPTH: 64
MAX_TOKEN_BYTES: 1048576

# INPUT

{1:2}

# EXPECTED

ERROR expected_name offset=1
